<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/HC_Category" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_local_dining_black_24dp"
            android:title="@string/Order" />
        <item
            android:id="@+id/nav_time"
            android:icon="@drawable/ic_trending_up_black_24dp"
            android:title="@string/HC_Statistic" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/HC_Account" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/HC_Send" />
    </group>



</menu>
