<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginAC">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:src="@drawable/mainactivity"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="TODO" />

        <LinearLayout
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp">

            <EditText
                android:hint="@string/LG_phone"
                android:id="@+id/edt_user"
                android:textSize="35sp"
                android:textColor="@android:color/background_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/LG_phone_demo"
                android:inputType="phone"/>

            <EditText
                android:hint="@string/LG_Password"
                android:id="@+id/edt_password"
                android:textSize="35sp"
                android:layout_marginTop="6dp"
                android:textColor="@android:color/background_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/LG_Password_Demo"
                android:inputType="textPassword"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content"
            android:padding="6dp">

            <Button
                android:onClick="SignUp"
                android:text="@string/LG_SignUp"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:background="@drawable/bg_start"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_marginRight="6dp"
                android:layout_height="50dp" />

            <Button
                android:onClick="Login"
                android:text="@string/LG_Login"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:background="@drawable/bg_start"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_marginLeft="6dp"
                android:layout_height="50dp" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>