<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:padding="6dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_namefood"
            android:layout_width="match_parent"
            android:hint="@string/app_name"
            android:layout_height="wrap_content" />


        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_price"
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_marginTop="6dp"
            android:hint="@string/Price"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_description"
            android:layout_width="match_parent"
            android:layout_marginTop="6dp"
            android:hint="@string/desctiption"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_select"
            android:layout_marginTop="6dp"
            android:text="Select"
            android:textColor="@android:color/background_light"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</RelativeLayout>