<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainAC">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:src="@drawable/mainactivity"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="TODO" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/main_app_names"
                    android:textColor="@android:color/background_light"
                    android:textSize="60sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/main_app_pizza"
                    android:textColor="@android:color/background_light"
                    android:textSize="40sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:onClick="start"
                    android:text="@string/main_startoder"
                    android:layout_width="200dp"
                    android:textColor="@android:color/background_light"
                    android:textSize="20sp"
                    android:background="@drawable/bg_start"
                    android:layout_height="50dp" />

            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>


</LinearLayout>