<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hello"
    android:padding="16dp"
    tools:context=".ui.CartAC">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/lv_listCat"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    
    <android.support.v7.widget.CardView
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/Total"
                    android:textSize="20sp"
                    android:textColor="@android:color/background_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txt_total"
                    android:text="@string/monny"
                    android:textSize="24sp"
                    android:textColor="@android:color/background_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_Order"
                android:layout_margin="8dp"
                android:layout_alignParentBottom="true"
                android:text="@string/PlaceOrder"
                android:background="@color/bg"
                android:textColor="@android:color/background_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>