<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_item2"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    android:layout_height="wrap_content">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_add"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_item2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/a" />
        <TextView
            android:id="@+id/txt_nameProduct"
            android:layout_marginTop="6dp"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/background_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:src="@drawable/sao"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_reviewPruct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="378"/>
            <TextView
                android:layout_marginLeft="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reviews"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/Price"
                android:textSize="15sp"
                android:layout_marginLeft="12dp"
                android:layout_gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_priceProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:text="@string/price"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="$"
                android:textSize="15sp" />

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

    </LinearLayout>

</android.support.v7.widget.CardView>