<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="5dp"
    android:layout_width="match_parent"
    android:padding="5dp"
    android:layout_height="80dp">

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_weight="9"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/time_item_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_marginLeft="10dp"
                    android:text="@string/app_name"
                    android:textAllCaps="true"
                    android:textColor="@android:color/background_dark"
                    android:textStyle="bold" />

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/time_item_date"
                    android:layout_width="0dp"
                    android:gravity="right"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_marginLeft="10dp"
                    android:text="@string/app_name" />
            </LinearLayout>
            <TextView
                android:id="@+id/time_item_status"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical|start"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:text="@string/Placed"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textColor="@android:color/background_dark"
                    android:id="@+id/time_item_location"
                    android:layout_marginLeft="10dp"
                    android:gravity="left"
                    android:textAllCaps="true"
                    android:text="@string/app_name"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView                android:textColor="@color/colorPrimary"
                    android:id="@+id/time_item_total"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/Total" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</android.support.v7.widget.CardView>